# lkl2

./: .gitignore  Cargo.toml  README.md  flutter_rust_bridge.yaml  pubspec.yaml  rs.rule
.trae/skills/flutter-best-practices/: SKILL.md
.trae/skills/rust-best-practices/: SKILL.md
lib/: log_provider.dart  main.dart  theme_provider.dart
lib/data/repository/: log_repository.dart
lib/src/rust/: file.dart  file.freezed.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/ui/dialogs/: log_detail_dialog.dart
lib/ui/pages/: home_page.dart
lib/ui/widgets/: active_filters_bar.dart  app_menu.dart  bottom_area.dart  bottom_status_bar.dart  file_drop_zone.dart  log_item.dart  log_list.dart  log_render_engine.dart  log_view_layout.dart  main_log_area.dart  (+1 more)
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/liblkl2/: Cargo.toml
rust/liblkl2/src/: file.rs  frb_generated.rs  lib.rs
rust/liblkl2/src/api/: simple.rs
rust/libparser/: Cargo.toml
rust/libparser/examples/: logsql.rs
rust/libparser/rules/: lkl2.toml
rust/libparser/src/: config.rs  db.rs  lib.rs  parser.rs
rust/logparser/: Cargo.toml  lkl2.toml
rust_builder/: pubspec.yaml
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_lkl2.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: generate_logs.py
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+15 files in other folders)
