[package]
name = "liblkl2"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.100"
flutter_rust_bridge = "=2.11.1"
once_cell = "1.21.3"
libparser = { path = "../libparser" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
