[package]
name = "libparser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
argh = "0.1"
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
rust-embed = { version = "8.5", features = ["include-exclude"] }
indexmap = "=2.2.6"
globset = "=0.4.14"
